# conference-connector

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  app.py  logging.ini  main.py  models.py  requirements.txt  twitter_data.py  twitter_stream.py
backend/utils/: env.py
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/components/: alignItemsList.tsx  claimForm.tsx  claimFormMobile.tsx  claimFormNew.tsx  footer.tsx  footerMobile.tsx  graph.tsx  joinGraph.tsx  leaderboard.tsx  leaderboardCard.tsx  leaderboardCardMobile.tsx  leaderboardContainer.tsx  leaderboardContainerMobile.tsx  leaderboardMobile.tsx  mainGraph.tsx  mybutton.tsx  participant.tsx  popup.tsx  search.tsx
frontend/pages/: _document.tsx  globals.css  index.tsx  signup.tsx  stats.tsx
frontend/public/: index.html
frontend/public/libs/orb/: events.d.ts  events.js  events.js.map  index.js  index.js.map  (+3 more)
frontend/src/: App.tsx  index.css
frontend/src/components/: chooseGraph.tsx  chooseGraphCard.tsx  chooseGraphContainer.tsx  claimForm.tsx  claimFormMobile.tsx  footer.tsx  footerMobile.tsx  graph.tsx  joinGraph.tsx  leaderboard.tsx  leaderboardCard.tsx  leaderboardCardMobile.tsx  leaderboardContainer.tsx  leaderboardContainerMobile.tsx  leaderboardMobile.tsx  mainGraph.tsx  mybutton.tsx
frontend/src/pages/: _document.tsx  index.tsx  signup.tsx
frontend/src/styles/: Footer.module.css  Home.module.css
frontend/styles/: Footer.module.css  Home.module.css  globals.css
memgraph/: Dockerfile
(+113 files in other folders)
