[tool.poetry]
name = "conference-connector"
version = "0.1.0"
description = ""
authors = ["Josip Mrden <josip.mrden@memgraph.io>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.79.1"
pydantic = "1.9.2"
uvicorn = "0.18.2"
gqlalchemy = "1.3.1"
tweepy = "4.10.0"
schedule = "1.1.0"
black = "^22.10.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
